<resources>
    <string name="app_name">Schedule</string>

    <string name="nav_online">Open online</string>
    <string name="nav_flutter">Open flutter</string>
    <string name="nav_call_schedule">Call schedule</string>
    <string name="nav_more">More</string>
    <string name="nav_settings">Settings</string>

    <string name="group_selection">Select your group</string>
    <string name="groups_year">Year:</string>
    <string name="connection_error">Could not load requested content. Please check your internet connection</string>
    <string name="groups_retry">Retry</string>

    <string name="call_schedule">
        1st class: 8:00–9:30
        \n2nd class: 9:40–11:10
        \n3rd class: 11:30–13:00
        \n4th class: 13:10–14:40
        \n5th class: 14:50–16:20
        \n6th class: 16:30–18:00
        \n7th class: 18:10–19:40
        \n8th class: 19:50–21:20
    </string>

    <string name="more_dark_theme">Dark theme</string>
    <string name="more_color_change">Primary color</string>
    <string name="more_color_title">Choose a color</string>
    <string name="more_group">Group</string>
    <string name="more_study_week">Study week</string>
    <string name="more_week_selector">Select a study week</string>
    <string name="more_update_frequency">Schedule update frequency</string>
    <string name="more_update_frequency_selector">Select an update frequency</string>
    <string name="more_auto_set_week">Set right week automatically</string>

    <string name="confirmation">OK</string>
    <string name="cancellation">Cancel</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <string name="channel_name">Schedule update notifications</string>
    <string name="channel_description">Used to show notifications when schedule\'s been updated</string>
    <string name="notification_text">Schedule has been updated</string>

    <string name="update_every_day">Every day</string>
    <string name="update_every_week">Every week</string>
    <string name="update_every_month">Every month</string>
    <string name="update_never">Never</string>

    <string name="schedule_types_practice">P\nR\nA\nC</string>
    <string name="schedule_types_lecture">L\nE\nC</string>
    <string name="schedule_types_lab_work">L\nA\nB</string>
    <string name="schedule_toolbar_subtitle">Today, %1$s</string>
    <string name="schedule_item_empty_text">No classes on this day</string>

    <string name="preference_not_specified">Not specified</string>
    <string name="more_header_actions">Actions</string>

    <string name="week_first">First</string>
    <string name="week_second">Second</string>
    <string name="week_third">Third</string>
    <string name="week_fourth">Fourth</string>

    <string name="toolbar_week_w1">W1</string>
    <string name="toolbar_week_w2">W2</string>
</resources>


