<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/action_bar_height"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:lines="1"
            android:ellipsize="end"
            android:minHeight="0dp"
            android:layout_marginTop="-5sp"
            android:layout_marginBottom="-6sp"
            style="@style/ToolbarThemeTitle" />

        <TextView
            android:id="@+id/toolbar_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:ellipsize="end"
            style="@style/ToolbarThemeSubtitle"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/toolbar_weeks_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="10dp"
        android:gravity="end">

        <RadioButton
            android:id="@+id/toolbar_weeks_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_week_w1"
            style="@style/WeekChangeButtonTheme" />

        <RadioButton
            android:id="@+id/toolbar_weeks_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_week_w2"
            style="@style/WeekChangeButtonTheme" />

    </RadioGroup>

</androidx.appcompat.widget.Toolbar>